# PyTaskFlow

./: .gitignore  AGENTS.md  CHANGELOG.md  GEMINI.MD  README.md  main.py  mkdocs.yml  phase_1.md  phase_2.md  phase_3.md  phase_5.md  pyproject.toml  run_dashboard.py  run_recover_stuck_jobs.py
.github/workflows/: docs-pages.yml  tests.yml
docs/: index.md
docs/api/: index.md
docs/guide/: configuration.md  creating-jobs.md  dashboard.md  installation.md  processing-jobs.md  storage-backends.md
docs/integrations/: fastapi.md  litestar.md
pytaskflow/: __init__.py  client.py  config.py
pytaskflow/common/: exceptions.py  job.py  states.py
pytaskflow/dashboard/: __init__.py  app.py
pytaskflow/dashboard/controllers/: core.py  jobs.py
pytaskflow/dashboard/static/css/: pytaskflow.css
pytaskflow/dashboard/static/js/: dashboard.js
pytaskflow/dashboard/templates/: _layout.html.j2  _macros.html.j2  _pagination.html.j2  index.html.j2  job_details.html.j2  jobs_list.html.j2  recurring.html.j2  servers.html.j2
pytaskflow/execution/: performer.py
pytaskflow/filters/: base.py  builtin.py
pytaskflow/integrations/: __init__.py  fastapi.py  litestar.py
pytaskflow/serialization/: base.py  json_serializer.py
pytaskflow/server/: context.py  processor.py  worker.py
pytaskflow/storage/: __init__.py  base.py  memory_storage.py  redis_storage.py
roadmap/: phase_1.md  phase_2.md  phase_3.md  phase_4.md  phase_5.md
src/pytaskflow/: __init__.py  client.py  config.py
src/pytaskflow/common/: exceptions.py  job.py
src/pytaskflow/dashboard/: app.py
src/pytaskflow/dashboard/controllers/: core.py  jobs.py
src/pytaskflow/dashboard/static/css/: pytaskflow.css
src/pytaskflow/dashboard/templates/: _layout.html.j2  job_details.html.j2
src/pytaskflow/filters/: base.py  builtin.py
src/pytaskflow/integrations/: fastapi.py
src/pytaskflow/serialization/: json_serializer.py
src/pytaskflow/server/: context.py  processor.py  worker.py
src/pytaskflow/storage/: __init__.py  base.py  memory_storage.py  redis_storage.py  sql_storage.py
tests/: test_phase1.py  test_phase2.py  test_phase4.py  test_phase5.py  test_sql_storage.py  test_tasks.py
