[project]
name = "pytaskflow"
version = "0.1.0"
description = "Background jobs and workers for Python"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "redis>=5.0.0",
    "cronsim>=2.6",
]

[project.optional-dependencies]
dashboard = [
    "litestar[jinja,standard]>=2.16.0",
    "uvicorn>=0.35.0",
]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.1",
    "ty>=0.0.1a12",
]
fastapi = [
    "fastapi>=0.110.0",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.25.0",
]
sql = [
    "sqlalchemy>=2.0.0",
]

[build-system]
requires = ["uv_build>=0.9.29,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "pytaskflow"
module-root = ""

[dependency-groups]
dev = [
    "ruff>=0.12.1",
]
