[project]
name = "pytaskflow"
version = "0.1.0"
description = "Background jobs and workers for Python"
readme = "README.md"
requires-python = ">=3.10,<3.15"
dependencies = [
    "redis>=5.0.0",
    "cronsim>=2.6",
    "litestar[jinja]>=2.23.0",
    "ty>=0.0.40",
    "ruff>=0.15.15",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Typing :: Typed",
]

[project.optional-dependencies]
dashboard = [
    "litestar[jinja,standard]>=2.16.0",
    "uvicorn>=0.35.0",
]
fastapi = [
    "fastapi>=0.110.0",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
    "mkdocstrings[python]>=1.0.3",
    "pymdown-extensions>=10.20.1",
]
sql = [
    "sqlalchemy>=2.0.0",
]

[build-system]
requires = ["uv_build>=0.11.17,<0.12"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "fastapi>=0.110.0",
    "litestar[jinja,standard]>=2.16.0",
    "pytest>=8.4.1",
    "ruff>=0.12.1",
    "sqlalchemy>=2.0.0",
    "ty>=0.0.1a12",
    "uvicorn>=0.35.0",
]
